# justload

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
justload/: __main__.py  utils.py
justload/providers/: __abc.py  youtube.py
src/: main.py  utils.py
tests/: conftest.py  test_instagram.py  test_login.py  test_utils.py  test_yt_load.py
